--- a/socreport.tex
+++ b/socreport.tex
@@ -2,20 +2,17 @@
 \usepackage{fullpage}
 \begin{document}
 \pagenumbering{roman}
-\title{Design and Implementation of an Algorithm for a Problem}
-\author{Tan Ah Kow}
-\projyear{2004/05}
-\projnumber{H123456}
-\advisor{Dr. Lee Ah Hua}
+\title{Exploring Locality Sensitive Hashing}
+\author{Govind Venugopalan}
+\projyear{2019/2020}
+\projnumber{H123456 (TO BE CHANGED)}
+\advisor{Asst. Prof Harold Soh, Asst Prof Kuldeep S Meel, Asst Prof Jonathan Scarlett}
 \deliverables{
 	\item Report: 1 Volume
-	\item Source Code: 1 DVD}
+	\item Source Code: None}
 \maketitle
 \begin{abstract}
-In this report, we study a problem and design an efficient algorithm
-to solve the problem.  We implemented the algorithm and evaluated
-its performance againts previous proposed algorithms that solves the
-same problem.  Our results show that our algorithm runs faster.
+Data is in huge abundance today and has increasingly high dimension. Normal classical, exact and deterministic algorithms normally suffer from the curse of dimensionality which cause algorithms to scale in exponential time which is not beneficial
 
 \begin{descriptors}
     \item C5 Computer System Implementation
@@ -39,44 +36,43 @@ same problem.  Our results show that our algorithm runs faster.
 \tableofcontents 
 
 \chapter{Introduction}
-Many problems exist in computer science.  In this project, we 
-studied one particular important problem and propose a solution 
-for it.  
+\label{ch: intro}
+Currently a lot of data processing involves crunching numbers with high dimensional data and ensuring that those 
 
 \section{Background}
+\label{sec : background}
 In this section, we briefly discuss the history and background
 of the problem.  A detail literature survey is presented in 
 Chapter \ref{ch:related}.
 
-The problem we study in this report is an important one.
-This problem is first proposed in 1990 in the context
-of graph theory \cite{smith90graph}.  Zhang gives the
-first algorithm to the problem and applied it to solve several 
-problems in artificial intelligence \cite{zhang91ai,zhang92ai}.  
-More recently, a slightly different formulation of the problem
-is studied independently \cite{kovsky92diff,ali94diff}.  None of this previous work
-uses the technique that we propose in this project.  Thus, we 
-believe that our algorithm is novel.
+
 
 \section{The Problem}
+\label{sec: problem}
 In this section, we formally defined the problem.  We adopt
 the definition given by Kovsky \cite{kovsky92diff}.
 
 \section{Our Solution}
+\label{sec :solution}
 \section{Report Organization}
-
+\label{sec : org}
 \chapter{Related Work}
 \label{ch:related}
 
-\chapter{Problem and Algorithm}
-\section{Formal Description of Problem}
-\section{Design of Algorithm}
-\section{Proof of Correctness}
-\section{Complexity Analysis}
+\chapter{Related Work}
+\section{Classical Minwise Hashing}
+\section{One Permutation Hashing}
+\subsection{Introduction}
+The first problem with regards to classical minwise hashing is that in the classical nearest-neighbours search algorithm, each query will take $O(dKL)$ time to calculate, where $d$ is the number of non-zero entries within the hash. This can be too expensive especially if $d$ is large since we already need $K$ and $L$ to be large in order for our accuracy to be good.\\
 
-\chapter{Evaluation}
-\section{Implementation Details}
-\section{Experimental Setup}
+The main reason why the costs become so expensive is due to the fact that there many different permutations to consider and each permutation must be evaluated in order for min-wise hashing to work. Hence the proposal by \cite{ali94diff}
+\subsection{Basis of Theoretical Analysis}
+
+\section{Winner-Takes All Hashing}
+
+\chapter{Improved Analysis}
+\section{Gaps in previous work}
+\section{Gaps to address in current work}
 \section{Results}
 
 \chapter{Conclusion}
@@ -88,9 +84,7 @@ the definition given by Kovsky \cite{kovsky92diff}.
 
 \appendix
 \chapter{Code}
-
+\chapter{Experimental Results}
 \chapter{Proofs}
-In this appendix, we present alternate, longer, but more interesting proof 
-of correctness of our algorithm.  This proof is based on induction and proof
-by contradiction.
+In this appendix we shall provide various extended proofs of lemmas found in the report. 
 \end{document}
